Made some changes in the styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,14 @@
     border-radius: 0.25rem; 
 }
 
+
 #randBookImage {
     border: solid 5px;
-    height: 500px;
+    height: 650px;
+    width: 500px;
     border-radius: 15px;
+    z-index:-1;
+    left:33%;   
 }
 
 .arrow {
@@ -28,4 +32,68 @@
     nav {
         max-width: 100%;
     }
-};
+}
+
+#navBarBookCount {
+    display: none;
+}
+
+@media screen and (max-width: 992px) {
+    #navBarBookCount {
+        display: flex;
+    }
+}
+
+@media (max-width: 992px) {
+    aside {
+        display: none;
+    }
+
+    #centerSection {
+        width: 100%;
+    }
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    padding-top: 30px;
+}
+
+#animatedButtons {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    font-family: sans-serif;
+}
+
+.loginCard {
+    height: 95vh;
+}
+
+aside {
+    height: 97vh;
+    position: fixed;
+    right: 0;
+}
+
+section {
+    max-height: 80vh;
+}
+
+#asideImage {
+    height: 300px;
+}
+
+#currentBook {
+    margin-left: auto;
+}
+
+/* Media Query for changing text size at breakpoints */
+
+
